# rb

./: .gitignore  README.md  REVIEWS.md  pyproject.toml  workplan.md
.github/workflows/: publish.yml  validate.yml
notes/: analysis_rationale_and_findings.md
queries/: wikidata_presidents.sparql
rb/: __main__.py  cache.py  cli.py  env.py  http.py  inference.py  ingest.py  metrics.py  narrative.py  presidents.py  randomization.py  regimes.py  scoreboard.py  site.py  spec.py  util.py  validate.py  vintage.py
rb/sources/: congress_legislators.py  fred.py  ken_french.py  nber.py  stooq.py  wikidata.py
reviews/: README.md  claude_v1_review.txt  claude_v2_review.txt  codex_v2_reconciliation.md  gemini_metrics_methodology_v2_review.txt  gemini_v1_review.txt  prompt_metrics_methodology_v2.txt  prompt_metrics_v1.txt
site/: data.json  index.html
spec/: README.md  aggregation_kinds_v1.yaml  attribution_v1.yaml  metrics_ci_smoke.yaml  metrics_ci_smoke_nonfred.yaml  metrics_coverage_v1.md  metrics_rationale.md  metrics_v1.yaml
tests/: test_vintage_report.py
tests/fixtures/: presidents_min.csv
